--- a/priv/index.html
+++ b/priv/index.html
@@ -4,7 +4,7 @@
     <meta HTTP-equiv="X-UA-Compatible" content="IE=EDGE">
     <!--<script type="text/javascript" src="http://fbug.googlecode.com/svn/lite/branches/firebug1.4/content/firebug-lite-dev.js"></script>-->
     <script src="/socket.io/socket.io.js"></script>
-    <script data-main="js/demo_main" src="js/lib/require.js"></script>
+    <script data-main="/js/demo_main" src="/js/lib/require.js"></script>
   </head>
   <body>
 
